Refactor CLI main entry point: make module requireable

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "github-todos": "bin/github-todos",
     "ght": "bin/github-todos"
   },
+  "preferGlobal": true,
   "author": "Nicolas Chambrier <naholyr@gmail.com>",
   "license": "MIT",
   "bugs": {
