--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^2.4.1",
     "mustache": "^0.8.2",
     "optimist": "^0.6.1",
-    "update-notifier": "^0.2.2"
+    "update-notifier": "^0.2.2",
+    "which": "^1.0.5"
   }
 }
