Use 'debug' (prefix: github-todos)

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hook"
   ],
   "dependencies": {
+    "debug": "^2.1.0",
     "lodash": "^2.4.1",
     "mustache": "^0.8.2",
     "optimist": "^0.6.1",
