--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "hook"
   ],
   "dependencies": {
+    "async": "^0.9.0",
     "debug": "^2.1.0",
+    "diff-parse": "0.0.13",
     "lodash": "^2.4.1",
     "mustache": "^0.8.2",
     "optimist": "^0.6.1",
