--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "^2.1.0",
     "diff-parse": "0.0.13",
     "github": "^0.2.2",
+    "inquirer": "^0.8.0",
     "lodash": "^2.4.1",
     "mustache": "^0.8.2",
     "optimist": "^0.6.1",
