--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "github": "^0.2.2",
     "inquirer": "^0.8.0",
     "lodash": "^2.4.1",
+    "minimatch": "^1.0.0",
     "mustache": "^0.8.2",
     "optimist": "^0.6.1",
     "update-notifier": "^0.2.2",
