--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "^2.1.0",
     "diff-parse": "0.0.13",
     "github": "^0.2.2",
+    "ini": "^1.3.0",
     "inquirer": "^0.8.0",
     "lodash": "^2.4.1",
     "minimatch": "^1.0.0",
