--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "diff-parse": "0.0.13",
     "github": "^0.2.2",
     "ini": "^1.3.0",
-    "inquirer": "^0.8.0",
+    "inquirer": "git://github.com/naholyr/Inquirer.js",
     "lodash": "^2.4.1",
     "minimatch": "^1.0.0",
     "mustache": "^0.8.2",
