FIX missing dependency ttys

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mustache": "^0.8.2",
     "open": "0.0.5",
     "optimist": "^0.6.1",
+    "ttys": "0.0.3",
     "update-notifier": "^0.2.2",
     "which": "^1.0.5"
   }
