--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "dependencies": {
     "async": "^0.9.0",
+    "bluebird": "^2.3.11",
     "debug": "^2.1.0",
     "diff-parse": "0.0.13",
     "github": "^0.2.2",
