--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-todos",
-  "version": "2.1.0",
+  "version": "3.0.0-dev",
   "description": "Git hook to convert your TODOs into Github issues",
   "main": "index.js",
   "scripts": {
